# vacancy_time_series_analysis

./: .gitignore  README.md  main.py  pyproject.toml
output/: combined_actuals.csv  projection.csv
vac_ts_analysis/: forecasting.py  ingest.py  main.py  preprocessing.py  visualisation.py
